tests/errors/surf_name_11.ki
# name resolution: undefined name as an element of a list literal
var xs = [1, 2, ghost]
discard xs
